# I2R_Sep24-Apr25_Internship_Phase2

./: .buildinfo  .env  .gitignore  .gitmodules  .isort.cfg  .ruff.toml  Dockerfile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  requirements-cpu.txt  requirements.txt  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/apidoc/: cli.doctree  dataset.doctree  metrics.doctree  models.attention.doctree  models.attention.urr.doctree  models.doctree  models.fusion.doctree  models.fusion.stn.doctree  modules.doctree  scripts.doctree  scripts.optuna.doctree  utils.doctree
.github/workflows/: docs.yml
_sources/apidoc/: dataset.rst.txt  metrics.rst.txt  models.fusion.rst.txt  models.fusion.stn.rst.txt  models.rst.txt  modules.rst.txt  scripts.optuna.rst.txt  scripts.rst.txt
apidoc/: cli.html  dataset.html  metrics.html  models.attention.html  models.attention.urr.html  models.fusion.html  models.fusion.stn.html  models.html  modules.html  scripts.html  scripts.optuna.html  utils.html
configs/: dummy_text.yaml  four_stream.yaml  multiclass_1_2.yaml  predict.yaml  predict_greyscale.yaml  predict_uncertainty.yaml  residual_attention_shuffle.yaml  testing.yaml  three_stream.yaml  training.yaml  training_no_checkpointing.yaml
docs/source/: conf.py
src/cli/: common.py
src/dataset/: __init__.py  dataset.py
src/metrics/: __init__.py  dice.py  hausdorff.py  infarct.py  jaccard.py  logging.py  loss.py  utils.py
src/models/: common.py  default_unet.py  two_plus_one.py  two_stream.py
src/models/attention/: lightning_module.py  model.py  segmentation_model.py
src/models/attention/urr/: lightning_module.py  model.py  segmentation_model.py
src/models/fusion/: __init__.py  fusion.py  lightning_module.py  model.py  segmentation_model.py
src/models/fusion/stn/: __init__.py  model.py  utils.py
src/models/tscse/: tscse.py  utils.py
src/scripts/: __init__.py  attention_unet.py  cine.py  four_stream.py  lge.py  three_stream.py  tscsenet.py  two_plus_one.py  urr_attention_unet.py
src/scripts/optuna/: __init__.py  urr_attention_unet.py
src/tests/: fusion.py  infarct_metrics.py
src/utils/: prediction_writer.py  types.py  utils.py
