[project]
name = "i2r-sep24-apr25-internship-phase2"
version = "0.1.0"
description = "Internship project phase 2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0",
    "torchvision",
    "lightning[pytorch-extra]",
    "jsonargparse[argcomplete,typing-extensions,omegaconf,signatures]<4.36.0",
    "tqdm",
    "rich",
    "pillow",
    "numpy",
    "segmentation-models-pytorch",
    "warmup-scheduler",
    "torchsummary",
    "tensorboard",
    "deepspeed",
    "scipy",
    "transformers",
    "tokenizers>=0.21.0",
    "ipython>=8.32.0",
    "ipykernel>=6.29.5",
    "einops>=0.8.1",
    "torch-scatter==2.1.2+pt25cu124 ; os_name != 'darwin'",
    "ml-collections>=1.0.0",
]

[dependency-groups]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-autodoc2",
    "sphinx-rtd-theme",
]
prototyping = [
    "matplotlib",
    "seaborn",
]
opencv-custom-build = [
    "opencv-contrib-python-headless",
]
dev = [
    "pytest>=8.3.4",
]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu124.html"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
